--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 body {
-   background-color: hotpink;
-  font-family: Georgia, 'Times New Roman', Times, serif
-  background-color: #f4f7fa;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  background-color: hotpink;
   margin: 0;
   padding: 0;
   display: flex;
@@ -75,9 +74,14 @@ h1 {
   margin-bottom: 0.75rem;
   padding: 0.75rem 1rem;
   border-radius: 5px;
+  gap: 1rem;
 }
 
-.todo-list li.completed {
+.todo-list li span {
+  flex-grow: 1;
+}
+
+.todo-list li.completed span {
   text-decoration: line-through;
   color: #888;
 }
@@ -87,7 +91,7 @@ h1 {
   border: none;
   color: #e74c3c;
   cursor: pointer;
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 
 .todo-list button:hover {
